<resources>
    <string name="app_name">Note App</string>
    <!---->
    <string name="title">Note App</string>
    <string name="background">Background</string>
    <string name="theme">Theme</string>
    <string name="change_theme">Change Theme</string>
    <string name="create_new_note_text">Create New Note</string>
    <string name="create_new_note_list">Create New List</string>
    <string name="delete">Delete Note</string>
    <string name="not_note">There are currently no notes.</string>
    <string name="hide_et_title">Edit title note.</string>
    <string name="hide_et_content">Insert text here…</string>
    <string name="toast_change_theme">Theme changes success.</string>
    <string name="toast_change_bg">Background changes success.</string>
    <string name="no_title">No Title.</string>
    <string name="action_search">Search</string>
    <string name="hide_txt_select">SELECT </string>
    <string name="hide_txt_note"> NOTE</string>
    <string name="view_grid"> View by grid</string>
    <string name="view_list"> View by list</string>
    <string name="trash">Trash</string>
    <string name="dial_delete_title"> Delete Note</string>
    <string name="dial_delete_mess1"> Do you want delete this note?</string>
    <string name="dial_delete_mess2"> Do you want delete all notes?</string>
    <string name="dial_btn_cancel"> Cancel</string>
    <string name="dial_btn_delete"> Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>