<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:background="@drawable/bg_corners"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corners_topl_topr"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/icon_delete_dial"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical|left"
            android:src="@drawable/icon_delete_dia"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginStart="40dp"
            android:text="@string/dial_delete_title"
            android:textColor="@color/text_black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/icon_close_dial"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="right|top"
            android:layout_marginEnd="10dp"
            android:src="@drawable/icon_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_dial_mess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/dial_delete_mess1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dial_cancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dial_btn_cancel"
            android:text="@string/dial_btn_cancel"
            android:textAllCaps="false"
            android:textColor="@color/text_blue" />

        <Button
            android:id="@+id/btn_dial_delete"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_dial_btn_delete"
            android:text="@string/dial_btn_delete"
            android:textAllCaps="false"
            android:textColor="@color/text_white" />
    </LinearLayout>
</LinearLayout>