<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BackgroundSettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/theme_blue"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingVertical="14dp"
                android:src="@drawable/icon_back_arrow"
                app:tint="@color/icon_white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:text="@string/title"
                android:textAllCaps="true"
                android:textColor="@color/text_title"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_bar"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/theme"
                        android:textColor="@color/text_black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_list_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="7.5dp"
                        android:layout_marginRight="7.5dp"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/app_bar"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:gravity="center_vertical"
                        android:paddingLeft="8dp"
                        android:text="@string/background"
                        android:textColor="@color/text_black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/text_black" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcv_list_background"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="7.5dp"
                        android:layout_marginRight="7.5dp"
                        android:layout_marginBottom="8dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>